--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    background:white;
+    background: lightslategray;
     list-style-type: none;
     text-decoration: none !important;
    
@@ -55,10 +55,11 @@
     padding: 10px 0;
     width: 100%;
     background: #fff; 
-    color: darkred;
+    color: #8B7B8B !important;
     transform-origin: bottom;
     transition: .5s;
     transform: perspective(500px) rotateX(90deg);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 .container:hover h2 {
     transform: perspective(500px) rotateX(0deg);
@@ -76,14 +77,17 @@
     width: 60px;
     height: 60px;
     text-align: center;
-    line-height: 60px;
+    line-height: 80px;
     transform-origin: left;
     transition: .5s;
     /* border-bottom: 1px solid grey; */
     transform: perspective(1000px) rotateY(90deg);
 }
-.container ul li .fa {
-    color: darkred;
+.fa-facebook-f,
+.fa-twitter,
+.fa-linkedin-in {
+    color: #8B7B8B;
+    background: white !important;
 }
 .container:hover ul li {
     transform: perspective(1000px) rotateY(0deg);
